variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:4: error: not found: value biscuits
while(2 * biscuits != caseOrange + 1) {
          ^RunHalf:4: error: not found: value caseOrange
while(2 * biscuits != caseOrange + 1) {
                      ^