variables.RunHalf.scala.code
var nbBiscuits=0
var nbCasesOranges=0

while(2 * biscuits != caseOrange + 1) {
  avance()
  if(estSurBiscuit()) {
    nbBiscuits=nbBiscuits+1
  }
  if(estSurOrange()) {
    nbCasesOranges=nbCasesOranges+1
  }
}